<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/OCRitLandscape"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/controls"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:srcCompat="@drawable/sample"
            android:contentDescription="@string/image_view_of_the_sample_text" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hello World!" />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnCam"
            android:onClick="takePhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/camera_button" />

        <ImageButton
            android:id="@+id/btnGallery"
            android:onClick="getImageFromGallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            android:contentDescription="@string/gallery_button" />

        <ImageButton
            android:id="@+id/btnCopy"
            android:onClick="copyText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="?attr/actionModeCopyDrawable"
            android:contentDescription="@string/copy_button" />

        <ImageButton
            android:id="@+id/btnShare"
            android:onClick="shareText"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="?attr/actionModeShareDrawable"
            android:contentDescription="@string/share_button" />
    </LinearLayout>

</RelativeLayout>